<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunderRegisterActivity3"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/talkMoneyFunderTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/letsTalkMoney"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/textBlue"/>

    <TextView
        android:id="@+id/fillReqFunderTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fillReqBelowFunder"
        android:textColor="@color/textBlue"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_marginTop="20dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/payableAmtET"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_white_bg"
        android:padding="10dp"
        android:inputType="number"
        android:hint="@string/payableAmt"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/returnonInvestmentET"
        android:layout_width="375dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_white_bg"
        android:padding="10dp"
        android:hint="@string/returnInv"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/detailsAboveFunderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textBlue"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/detAboveFunder"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/finishRegFunder"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue_bg"
        android:padding="10dp"
        android:text="@string/finish"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

</LinearLayout>