<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunderRegisterActivity1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/yourInterestsTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourInt"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/textBlue"/>

    <TextView
        android:id="@+id/letUsKnowTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/letUsKnowInt"
        android:textColor="@color/textBlue"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/spinner4LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categoryFunderTV"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_white_bg"
            android:hint="@string/chooseCategory"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spinnerFunderCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/spinner5LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/stageFunderTV"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_white_bg"
            android:hint="@string/ideaStage"
            android:padding="10dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spinnerFunderStage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select"/>

    </LinearLayout>

    <TextView
        android:id="@+id/nextRegFunder1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue_bg"
        android:padding="10dp"
        android:text="@string/next"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

</LinearLayout>