<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pleaseEnterEmail"
        android:textColor="@color/textBlue"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/inputEmailForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_white_bg"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/sendEmailResetPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue_bg"
        android:padding="10dp"
        android:text="@string/sendEmail"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/weWillSendEmailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textBlue"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/weWillSendEmail"
        android:textSize="15sp"/>


</LinearLayout>