<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/aboutYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutYou"
        android:textColor="@color/textBlue"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/foundOrFund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/founderOrFunder"
        android:layout_below="@+id/aboutYou"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/textBlue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/founderTV"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/founder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_blue_bg"
        android:padding="20dp"
        android:textAlignment="center"
        android:layout_below="@+id/foundOrFund"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/orTV2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/founderTV"
        android:text="@string/or"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/textBlue"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/funderTv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/funder"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_blue_bg"
        android:padding="20dp"
        android:textAlignment="center"
        android:layout_below="@+id/orTV2"
        android:textStyle="bold"
        android:textSize="15sp"/>


</RelativeLayout>