<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:textColor="@color/textBlue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="#ffffff"
            app:boxBackgroundColor="#ffffff"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:errorEnabled="true"
            android:inputType="textEmailAddress"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/emailET"
               android:background="@drawable/rounded_white_bg"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/pwd"
            android:layout_width="match_parent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="#ffffff"
            app:boxBackgroundColor="#ffffff"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/pwdET"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_white_bg"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/orTV"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/textBlue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="#ffffff"
            app:boxBackgroundColor="#ffffff"
            android:inputType="phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_white_bg"
                android:hint="@string/phoneNum"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_blue_bg"
            android:padding="10dp"
            android:text="@string/loginBtn"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/forgotPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/textBlue"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/not_a_member_sign_up_now"
        android:textAlignment="center"
        android:textColor="@color/textBlue"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>